plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.3'
	id 'io.spring.dependency-management' version '1.1.0'
	id "org.flywaydb.flyway" version "9.8.1"
	id "org.sonarqube" version "4.0.0.2929"
	id 'jacoco'
}

group = 'com.Recipes'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}



repositories {
	mavenCentral()
	maven { url 'https://mvnrepository.com' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
	implementation 'net.logstash.logback:logstash-logback-encoder:7.1.1'
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.7'
	implementation 'io.projectreactor:reactor-core:3.4.8'
	implementation 'org.modelmapper:modelmapper:2.4.4'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
	implementation 'mysql:mysql-connector-java:8.0.28'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'



}
flyway {
	url = 'jdbc:h2:file:./target/foobar'
	user = 'sa'
}

// configure the plugin to output test reports in the XML format required by SonarQube
jacocoTestReport {
	reports {
		xml.enabled true
	}
}

// use finalizedBy to ensure that the test report is always generated after tests are run
test.finalizedBy jacocoTestReport

// to ensure the Jacoco test report is always created when we run the sonarqube task
// let’s setup the following dependsOn relationship:
tasks.named('sonarqube').configure {
	dependsOn test
}

tasks.named('test') {
	useJUnitPlatform()
}
